Update HW 18 with HW 19 template

--- a/index.html
+++ b/index.html
@@ -2,67 +2,99 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/style.css">
-    <title></title>
+  <title>Homework 17 Solved</title>
+  <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <header class="navigation">
-        <nav class="inline-block">
-            <ul>
-                <li class="inline-block">my work</li>
-                <li class="inline-block">about</li>
-                <li class="inline-block">contact</li>
-                <li class="inline-block">resume</li>
-            </ul>
-        </nav>
-        <div class="logo">
-            <img src="images/me.jpg" width="200" height="200">
-        </div>
-
-    </header>
-    <section class="heroImg">
-        <div class="content">
-            <img src="images/heroimage.png" width="300%">
-            <p>Hello, I am Alyssa Rowe!
-
-                I am a freelance UX/UI designer.
-
-                I have a background in Gym Management and Personal Training. I have experience in working with
-                various personalities, as well as putting myself in my client’s shoes to better understand their
-                goals and why that is their goal. Aesthetics is always part of their goal as well. My goal is to
-                create user friendly and aesthetically pleasing User Interfaces.</p>
-        </div>
-
+  <header>
+    <img src="images/logo.png">
+    <ul>
+      <li>ABOUT</li>
+      <li><a href="#myUxSkills">SKILLS</a></li>
+      <li><a href="#myWork">WORK</a></li>
+      <li>CONTACT</li>
+    </ul>
+  </header>
+  <section class="heroImg">
+    <div class="content">
+      <img src="images/placeholder_picture.png">
+      <h1>Your Name</h1>
+      <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et
+        dolore magna aliqua.</p>
+      <button>Download Resume</button>
+    </div>
+  </section>
+  <div id="myUxSkills">
+    <h1 class="heading">My UX Skills</h1>
+    <section class="flexContainer">
+      <div>
+        <img src="images/placeholderSkill.png">
+        <h3>User Research</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip
+          ex ea commodo consequat</p>
+      </div>
+      <div>
+        <img src="images/placeholderSkill.png">
+        <h3>User Interface Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip
+          ex ea commodo consequat</p>
+      </div>
+      <div>
+        <img src="images/placeholderSkill.png">
+        <h3>Web Development</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip
+          ex ea commodo consequat</p>
+      </div>
     </section>
-    <!--  My Projects section coded using CSS flex -->
-    <section class="myProjects">
-        <h2>My Projects</h2>
-        <div class="flexContainer">
-            <div>
-                <img src="images/portfolioimage2.png">
-                <h3>U.S. Department of Energy</h3>
-            </div>
-            <div>
-                <img src="images/steac-crop.png">
-                <h3>Non-Profit Organization: STEAC</h3>
-            </div>
-            <div>
-                <img src="images/gottago-crop.png">
-                <h3>GottaGo Mobile App</h3>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <ul>
-            <li>my work</li>
-            <li>about</li>
-            <li>contact</li>
-            <li>resume</li>
-        </ul>
-    </footer>
-    </nav>
+  </div>
 
+  <section class="myWork" id="myWork">
+    <h1 class="heading">My Work</h1>
+    <div class="workGrid">
+      <div class="img1">
+        <img src="images/placeholder_picture.png">
+      </div>
+      <div class="content1">
+        <h4>User Research</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip
+          ex ea commodo consequat.</p>
+        <button>View Project</button>
+      </div>
+      <div class="img2">
+        <img src="images/placeholder_picture.png">
+      </div>
+      <div class="content2">
+        <h4>User Research</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip
+          ex ea commodo consequat.</p>
+        <button>View Project</button>
+      </div>
+      <div class="img3">
+        <img src="images/placeholder_picture.png">
+      </div>
+      <div class="content3">
+        <h4>User Research</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco poriti laboris nisi ut aliquip
+          ex ea commodo consequat.</p>
+        <button>View Project</button>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li>ABOUT</li>
+      <li>SKILLS</li>
+      <li>WORK</li>
+      <li>CONTACT</li>
+    </ul>
+  </footer>
 </body>
 
 </html>
