--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <img src="images/logo.png">
     <ul>
       <li>ABOUT</li>
-      <li><a href="#myUxSkills">SKILLS</a></li>
-      <li><a href="#myWork">WORK</a></li>
+      <li id="skills">SKILLS</li>
+      <li id="work">WORK</li>
       <li>CONTACT</li>
     </ul>
   </header>
@@ -96,5 +96,6 @@
     </ul>
   </footer>
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/index.js"></script>
 </html>
